# python-project-50

./: .coveragerc  .gitignore  Makefile  README.md  codeclimate.json  coverage.json  coverage.lcov  coverage.xml  output.txt  output_stylish.txt  output_yaml.txt  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: pyci.yml
PyYAML-3.13/: setup.cfg  setup.py
PyYAML-3.13/examples/pygments-lexer/: yaml.py
PyYAML-3.13/examples/yaml-highlight/: yaml_hl.py
PyYAML-3.13/lib/yaml/: __init__.py  composer.py  cyaml.py  dumper.py  emitter.py  error.py  loader.py  parser.py  reader.py  representer.py  scanner.py  serializer.py  tokens.py
PyYAML-3.13/lib3/yaml/: __init__.py  composer.py  constructor.py  cyaml.py  dumper.py  emitter.py  error.py  events.py  loader.py  nodes.py  parser.py  reader.py  representer.py  resolver.py  scanner.py  serializer.py
PyYAML-3.13/tests/lib/: canonical.py  test_all.py  test_appliance.py  test_build_ext.py  test_yaml.py
PyYAML-3.13/tests/lib3/: canonical.py  test_appliance.py  test_build.py  test_canonical.py  test_constructor.py  test_emitter.py  test_errors.py  test_input_output.py  test_mark.py  test_reader.py  test_recursive.py  test_representer.py  test_resolver.py  test_structure.py  test_tokens.py  (+1 more)
gendiff/: __init__.py  cli.py  diff.py  diff_builder.py  parser.py  parsers.py  read_file.py
gendiff/formatters/: __init__.py  json.py  plain.py  setup.cfg  stylish.py  yaml.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_diff.py  test_flat_json.py  test_plain.py  test_stylish.py  test_yaml_diff.py
