[project]
authors = [
    {name = "Marina Charaeva", email = "marina_charaeva@yahoo.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = 'gendiff.scripts.gendiff:main'

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B"]
ignore = ["E203", "W503"]