[project]
name = "hexlet-code"
version = "0.1.0"
description = "Generate difference between two files (JSON, YAML)"
authors = [
    {name = "Marina Charaeva", email = "marina_charaeva@yahoo.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gendiff = 'gendiff.scripts.gendiff:main'

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"